# context-space-policy-optimization

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
paper/: biblio.bib  main.tex  neurips_2025.sty
results/: multitask_transfer.json  narrative_numbers.json  traffic_results.json
scripts/: analyze_contexts.py  generate_figures.py  run_ablation.py  run_compute_comparison.py  run_d4rl_experiments.py  run_domain_transfer.py  run_multitask_transfer.py  run_traffic_experiment.py  smoke_test.py
src/: __init__.py
src/baselines/: __init__.py  baseline_scores.py
src/cspo/: __init__.py  advantage.py  context_library.py  context_optimizer.py  group_rollout.py  online_cspo.py
src/envs/: __init__.py  d4rl_wrapper.py  traffic_env.py
src/models/: __init__.py  decision_transformer.py  trajectory_dataset.py
src/utils/: __init__.py  config.py  metrics.py  seed.py
tests/: test_advantage.py  test_baselines.py  test_context_library.py  test_context_library_persistence.py  test_context_optimizer.py  test_decision_transformer.py  test_edge_cases.py  test_experiment_scripts.py  test_group_rollout.py  test_online_cspo.py  test_traffic_env.py
